src/main/java/org/example/blog/_core/errors/exception/Exception403.java
package org.example.blog._core.errors.exception;

/**
 * 403 Forbidden 권한 없음
 * */
public class Exception403 extends RuntimeException {
    public Exception403(String msg) {
        super(msg);
    }
}
